<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".imccalculator.ImcCalculatorActivity"
        android:paddingHorizontal="16dp"
        android:paddingVertical="32dp"
        android:background="@color/background_app">

    <androidx.cardview.widget.CardView
            android:id="@+id/viewMale"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/background_component_selected"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/viewFemale"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">
            <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_male"
                    app:tint="@color/white" android:contentDescription="TODO"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/title_text"
                    android:textAllCaps="true"
                    android:layout_marginTop="8dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/viewFemale"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:cardBackgroundColor="@color/background_component"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/viewMale"
            app:cardCornerRadius="16dp"
    >

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

            <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_female"
                    app:tint="@color/white"
            />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/title_text"
                    android:layout_marginTop="8dp"
                    android:text="@string/female"
                    android:textAllCaps="true"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/viewHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewFemale"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="@color/background_component"
            app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/height"
                    android:textAllCaps="true"
                    android:textColor="@color/title_text"/>

            <TextView
                    android:id="@+id/tvHeight"
                    android:text="120 cm"
                    android:textSize="38sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
            />

            <com.google.android.material.slider.RangeSlider
                    android:id="@+id/rsHeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="1"
                    android:valueFrom="120"
                    android:valueTo="200"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/viewWeight"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintTop_toBottomOf="@id/viewHeight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/viewAge"
            app:cardBackgroundColor="@color/background_component"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weight"
                    android:textAllCaps="true"
                    android:textColor="@color/title_text"/>

            <TextView
                    android:id="@+id/tvWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="45"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="30sp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnMinusWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:backgroundTint="@color/background_fab"
                        android:src="@drawable/ic_minus"
                        app:tint="@color/white"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnPlusWeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/background_fab"
                        android:src="@drawable/ic_plus"
                        app:tint="@color/white"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:id="@+id/viewAge"
            android:layout_width="0dp"
            android:layout_height="150dp"
            app:layout_constraintStart_toEndOf="@id/viewWeight"
            app:layout_constraintTop_toBottomOf="@id/viewHeight"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardBackgroundColor="@color/background_component"
            app:cardCornerRadius="16dp"
            android:layout_marginTop="32dp">

        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textColor="@color/title_text"
                    android:textAllCaps="true"/>

            <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="20"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
            />

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnMinusAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:src="@drawable/ic_minus"
                        app:tint="@color/white"
                        android:backgroundTint="@color/background_fab"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/btnPlusAge"
                        app:tint="@color/white"
                        android:src="@drawable/ic_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/background_fab"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <Button
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</androidx.constraintlayout.widget.ConstraintLayout>

        <!--ByJulian-->